--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpstan/phpstan": "^0.12.25",
+        "phpunit/phpunit": "^8.5",
+        "symplify/easy-coding-standard": "^7.3"
     },
     "config": {
         "optimize-autoloader": true,
@@ -49,6 +51,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "test" : [
+            "vendor/bin/phpunit"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
