--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,33 @@
-APP_NAME=Laravel
+APP_NAME='Charging stations'
 APP_ENV=local
+#APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+#APP_DEBUG=false
+APP_URL=http://127.0.0.1:8001
 
-LOG_CHANNEL=stack
+FILESYSTEM_DRIVER=local
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+LOG_CHANNEL=daily
+
+DB_CONNECTION=pgsql
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=charging_stations
+DB_USERNAME=postgres
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
