--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "deepmerge": "^4.2.2",
+        "fibers": "^5.0.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass": "^1.26.5",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.11",
+        "@mdi/font": "^4.5.95"
+    },
+    "dependencies": {
+        "vue": "^2.6.11",
+        "vue-router": "^3.2.0",
+        "vuetify": "^2.2.29"
     }
 }
