--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,10 @@ public_html/storage
 public_html/hot
 
 # Webpack exec
-#public/css/
-#public/js/
-#public/mix-manifest.json
+public/css/
+public/js/
+public/fonts/
+public/mix-manifest.json
 
 storage/*.key
 .env
@@ -29,3 +30,4 @@ storage/*.key
 .docker/.mysql
 docker-compose.yml
 cmd.txt
+commands.txt
