--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "nunomaduro/collision": "^4.1",
         "phpstan/phpstan": "^0.12.25",
         "phpunit/phpunit": "^8.5",
-        "symplify/easy-coding-standard": "^7.3"
+        "symplify/easy-coding-standard": "^7.3",
+        "ext-json": "*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -46,7 +47,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "tests/utilities/functions.php"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
