--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME='Charging stations'
-APP_ENV=local
-#APP_ENV=production
+#APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-#APP_DEBUG=false
+#APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://127.0.0.1:8001
 
 FILESYSTEM_DRIVER=local
