--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@mdi/font": "^4.5.95",
         "axios": "^0.19",
         "cross-env": "^7.0",
         "deepmerge": "^4.2.2",
         "fibers": "^5.0.0",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.26.5",
+        "laravel-mix": "^5.0.7",
+        "lodash": "^4.17.20",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.28.0",
         "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.11",
-        "@mdi/font": "^4.5.95"
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "vue": "^2.6.11",
-        "vue-router": "^3.2.0",
-        "vuetify": "^2.2.29"
+        "vue": "^2.6.12",
+        "vue-router": "^3.4.8",
+        "vuetify": "^2.3.16"
     }
 }
